--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,7 +35,7 @@
     {{super()}}  {# do not forget to call super or Bootstrap's own stylesheets
                     will disappear! #}
     <link rel="stylesheet" type="text/css"
-          href="{{url_for('static', filename='sample-app.css')}}">
+          href="{{url_for('static', filename='css/style.css')}}">
 {% endblock %}
 
 {# Finally, round things out with navigation #}
