--- a/application/templates/security/change_password.html
+++ b/application/templates/security/change_password.html
@@ -1,11 +1,20 @@
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% include "security/_messages.html" %}
-<h1>Change password</h1>
-<form action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
-  {{ change_password_form.hidden_tag() }}
-  {{ render_field_with_errors(change_password_form.password) }}
-  {{ render_field_with_errors(change_password_form.new_password) }}
-  {{ render_field_with_errors(change_password_form.new_password_confirm) }}
-  {{ render_field(change_password_form.submit) }}
-</form>
-
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Change password &mdash; {{ super() }}{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="page-header"><h1>Change password</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <form class="form-horizontal" action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
+          {{ change_password_form.hidden_tag() }}
+          {{ wtf.form_errors(change_password_form, hiddens="only") }}
+          {{ wtf.form_field(change_password_form.password, form_type="horizontal") }}
+          {{ wtf.form_field(change_password_form.new_password, form_type="horizontal") }}
+          {{ wtf.form_field(change_password_form.new_password_confirm, form_type="horizontal") }}
+          {{ wtf.form_field(change_password_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
+        </form>
+      </div>
+    </div>
+  </div>
+{% endblock %}
