--- a/application/templates/security/forgot_password.html
+++ b/application/templates/security/forgot_password.html
@@ -1,9 +1,19 @@
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% include "security/_messages.html" %}
-<h1>Send password reset instructions</h1>
-<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
-  {{ forgot_password_form.hidden_tag() }}
-  {{ render_field_with_errors(forgot_password_form.email) }} 
-  {{ render_field(forgot_password_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Send password reset instructions &mdash; {{ super() }}{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="page-header"><h1>Send password reset instructions</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <form class="form-horizontal" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+          {{ forgot_password_form.hidden_tag() }}
+          {{ wtf.form_errors(forgot_password_form, hiddens="only") }}
+          {{ wtf.form_field(forgot_password_form.email, form_type="horizontal") }} 
+          {{ wtf.form_field(forgot_password_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
+        </form>
+      </div>
+    </div>
+    {%- include "security/_menu.html" %}
+  </div>
+{% endblock %}
