--- a/application/templates/security/login_user.html
+++ b/application/templates/security/login_user.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}{{ super() }} &mdash; please login{% endblock %}
+{% block title %}Please login &mdash; {{ super() }}{% endblock %}
 {% block content %}
   <div class="container">
+    <div class="page-header"><h1>Login</h1></div>
     <div class="row">
       <div class="col-md-12">
-        <h1>Login</h1>
-        <form class="form" action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
+        <form class="form-horizontal" action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
           {{ login_user_form.hidden_tag() }}
           {{ wtf.form_errors(login_user_form, hiddens="only") }}
-          {{ wtf.form_field(login_user_form.email) }}
-          {{ wtf.form_field(login_user_form.password) }}
-          {{ wtf.form_field(login_user_form.remember) }}
-          {{ wtf.form_field(login_user_form.next) }}
-          {{ wtf.form_field(login_user_form.submit) }}
+          {{ wtf.form_field(login_user_form.email, form_type="horizontal") }}
+          {{ wtf.form_field(login_user_form.password, form_type="horizontal") }}
+          {{ wtf.form_field(login_user_form.remember, form_type="horizontal") }}
+          {{ login_user_form.next }}
+          {{ wtf.form_field(login_user_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
         </form>
-        {% include "security/_menu.html" %}
       </div>
     </div>
+    {%- include "security/_menu.html" %}
   </div>
 {% endblock %}
