--- a/application/templates/security/register_user.html
+++ b/application/templates/security/register_user.html
@@ -1,13 +1,23 @@
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% include "security/_messages.html" %}
-<h1>Register</h1>
-<form action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
-  {{ register_user_form.hidden_tag() }}
-  {{ render_field_with_errors(register_user_form.email) }}
-  {{ render_field_with_errors(register_user_form.password) }}
-  {% if register_user_form.password_confirm %}
-    {{ render_field_with_errors(register_user_form.password_confirm) }}
-  {% endif %}
-  {{ render_field(register_user_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Sign up &mdash; {{ super() }}{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="page-header"><h1>Sign up</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <form class="form-horizontal" action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
+          {{ register_user_form.hidden_tag() }}
+          {{ wtf.form_errors(register_user_form, hiddens="only") }}
+          {{ wtf.form_field(register_user_form.email, form_type="horizontal") }}
+          {{ wtf.form_field(register_user_form.password, form_type="horizontal") }}
+          {% if register_user_form.password_confirm %}
+            {{ wtf.form_field(register_user_form.password_confirm, form_type="horizontal") }}
+          {% endif %}
+          {{ wtf.form_field(register_user_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
+        </form>
+      </div>
+    </div>
+    {%- include "security/_menu.html" %}
+  </div>
+{% endblock %}
