--- a/application/templates/security/reset_password.html
+++ b/application/templates/security/reset_password.html
@@ -1,10 +1,20 @@
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% include "security/_messages.html" %}
-<h1>Reset password</h1>
-<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-  {{ reset_password_form.hidden_tag() }}
-  {{ render_field_with_errors(reset_password_form.password) }}
-  {{ render_field_with_errors(reset_password_form.password_confirm) }}
-  {{ render_field(reset_password_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Reset password &mdash; {{ super() }}{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="page-header"><h1>Reset password</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <form class="form-horizontal" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+          {{ reset_password_form.hidden_tag() }}
+          {{ wtf.form_errors(login_user_form, hiddens="only") }}
+          {{ wtf.form_field(reset_password_form.password, form_type="horizontal", form_type="horizontal") }}
+          {{ wtf.form_field(reset_password_form.password_confirm, form_type="horizontal") }}
+          {{ wtf.form_field(reset_password_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
+        </form>
+      </div>
+    </div>
+    {%- include "security/_menu.html" %}
+  </div>
+{% endblock %}
