--- a/application/templates/security/send_confirmation.html
+++ b/application/templates/security/send_confirmation.html
@@ -1,9 +1,19 @@
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% include "security/_messages.html" %}
-<h1>Resend confirmation instructions</h1>
-<form action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
-  {{ send_confirmation_form.hidden_tag() }}
-  {{ render_field_with_errors(send_confirmation_form.email) }}
-  {{ render_field(send_confirmation_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Resend confirmation instructions &mdash; {{ super() }}{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="page-header"><h1>Resend confirmation instructions</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <form class="form-horizontal" action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
+          {{ send_confirmation_form.hidden_tag() }}
+          {{ wtf.form_errors(send_confirmation_form, hiddens="only") }}
+          {{ wtf.form_field(send_confirmation_form.email, form_type="horizontal") }}
+          {{ wtf.form_field(send_confirmation_form.submit, form_type="horizontal", button_map={"submit":"primary"}) }}
+        </form>
+      </div>
+    </div>
+    {%- include "security/_menu.html" %}
+  </div>
+{% endblock %}
