--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,6 +35,8 @@
     {{super()}}  {# do not forget to call super or Bootstrap's own stylesheets
                     will disappear! #}
     <link rel="stylesheet" type="text/css"
+          href="{{url_for('static', filename='bootstrap/css/bootstrap-theme.min.css')}}">
+    <link rel="stylesheet" type="text/css"
           href="{{url_for('static', filename='css/style.css')}}">
 {% endblock %}
 
