--- a/application/templates/useradmin/create_or_edit_user.html
+++ b/application/templates/useradmin/create_or_edit_user.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Edit user: {{ user }}{% endblock %}
+{%- block title -%}
+  {% if user %}Edit user: {{ user }}{% else %}Create a user{% endif %}
+{%- endblock -%}
 {% block content %}
   <div class="container">
-    <div class="page-header"><h1>Edit user: {{ user }}</h1></div>
+    <div class="page-header">
+      <h1>
+        {%- if user -%}
+          Edit user: {{ user }}
+        {% else %}
+          Create a user
+        {%- endif -%}
+      </h1>
+    </div>
     <div class="row">
       <div class="col-md-12">
         <form class="form-horizontal" action="" method="POST">
