--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -12,7 +12,7 @@
 
 {# We also set a default title, usually because we might forget to set one.
    In our sample app, we will most likely just opt not to change it #}
-{% block title %}Boilerplate app{% endblock %}
+{% block title %}{{ config.SITE_TITLE }}{% endblock %}
 
 {# While we are at it, we also enable fixes for legacy browsers. First we
    import the necessary macros: #}
