--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,15 +1,9 @@
-{# This simple template derives from ``base.html``. See ``base.html`` for
-   more information about template inheritance. #}
 {%- extends "base.html" %}
-
-{# Inside the ``content`` is where you should place most of your own stuff.
-   This will keep scripts at the page end and a navbar you add on later
-   intact. #}
 {% block content %}
   <div class="container">
     <div class="jumbotron">
       <h1>Welcome to the boilerplate app</h1>
-      <p>Under construction...</p>
+       <p>A site about nothing...</p>
     </div>
   </div>
 {%- endblock %}
