--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,9 +1,10 @@
 {%- extends "base.html" %}
+{% block title %}{{ config.SITE_TITLE }} &mdash; {{ config.SITE_SUBTITLE }}{% endblock %}
 {% block content %}
   <div class="container">
     <div class="jumbotron">
-      <h1>Welcome to the boilerplate app</h1>
-       <p>A site about nothing...</p>
+      <h1>{{ config.SITE_TITLE }}</h1>
+       <p>{{ config.SITE_SUBTITLE }}</p>
     </div>
   </div>
 {%- endblock %}
