--- a/application/templates/members.html
+++ b/application/templates/members.html
@@ -2,10 +2,43 @@
 {% block title %}Member area &mdash; {{ super() }}{% endblock %}
 {% from "bootstrap/utils.html" import icon %}
 {% block content %}
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Member area</h1>
-      <p>{{ icon('lock') }} Stuff here is exclusive.</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Member area</h1>
+    <p>{{ icon('lock') }} Stuff here is exclusive.</p>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>What's new?</h3>
+      {% if not object_list.count() %}
+        <div class="alert alert-warning">
+          Nothing special :(
+        </div>
+      {% endif %}
+      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        {% for o in object_list %}
+          <div class="panel panel-info">
+            <div class="panel-heading" role="tab" id="heading-{{ o.id }}">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion"
+                  href="#collapse-{{ o.id }}"
+                  {%- if loop.first -%}aria-expanded="true"{%- endif -%}
+                  aria-controls="{{ o.id }}">
+                  {{ o.title }}
+                </a>
+              </h4>
+            </div>
+            <div id="collapse-{{ o.id }}" class="panel-collapse collapse{% if loop.first %} in{% endif %}"
+              role="tabpanel" aria-labelledby="heading-{{ o.id }}">
+              <div class="panel-body">
+                {{ o.content|markdown }}
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+      {% include "_pagination.html" %}
     </div>
   </div>
+</div>
 {%- endblock %}
