--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,5 +1,12 @@
 {%- extends "base.html" %}
 {% block title %}{{ config.SITE_TITLE }} &mdash; {{ config.SITE_SUBTITLE }}{% endblock %}
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+// rensponsivize all the images
+$('#accordion img').addClass('img-responsive')
+</script>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="jumbotron">
