--- a/application/templates/members.html
+++ b/application/templates/members.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Member area &mdash; {{ super() }}{% endblock %}
 {% from "bootstrap/utils.html" import icon %}
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+// rensponsivize all the images
+$('#accordion img').addClass('img-responsive')
+</script>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="jumbotron">
