--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -23,7 +23,7 @@ $('#accordion img').addClass('img-responsive')
       {% endif %}
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         {% for o in object_list %}
-          <div class="panel panel-primary">
+          <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="heading-{{ o.id }}">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion"
