initial i18n (babel) commit

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -1,4 +1,1 @@
-body { padding-top: 70px; } // for navbar-fixed-top
-.jumbotron {
-  margin-top: 1em;  // add a little space
-}
+body { padding-top: 70px } // for navbar-fixed-top
