--- a/application/sitepack/templates/security/_menu.html
+++ b/application/sitepack/templates/security/_menu.html
@@ -3,16 +3,16 @@
   <div class="panel-body text-center">
     <div class="btn-group" role="group" aria-label="menu">
       {%- if not request.path.endswith(url_for_security('login')) %}
-        <a class="btn btn-link" href="{{ url_for_security('login') }}{% if 'next' in request.args %}?next={{ request.args.next|urlencode }}{% endif %}">Login</a>
+        <a class="btn btn-link" href="{{ url_for_security('login') }}{% if 'next' in request.args %}?next={{ request.args.next|urlencode }}{% endif %}">{{ _('Login') }}</a>
       {%- endif %}
       {%- if security.registerable and not request.path.endswith(url_for_security('register')) %}
-      <a class="btn btn-link" href="{{ url_for_security('register') }}{% if 'next' in request.args %}?next={{ request.args.next|urlencode }}{% endif %}">Register</a>
+      <a class="btn btn-link" href="{{ url_for_security('register') }}{% if 'next' in request.args %}?next={{ request.args.next|urlencode }}{% endif %}">{{ _('Register') }}</a>
       {%- endif %}
       {%- if security.recoverable and not request.path.endswith(url_for_security('forgot_password')) %}
-      <a class="btn btn-link" href="{{ url_for_security('forgot_password') }}">Forgot password</a>
+      <a class="btn btn-link" href="{{ url_for_security('forgot_password') }}">{{ _('Forgot password') }}</a>
       {%- endif %}
       {%- if security.confirmable and not request.path.endswith(url_for_security('send_confirmation')) %}
-      <a class="btn btn-link" href="{{ url_for_security('send_confirmation') }}">Confirm account</a>
+      <a class="btn btn-link" href="{{ url_for_security('send_confirmation') }}">{{ _('Confirm account') }}</a>
       {%- endif %}
     </div>
   </div>
