--- a/application/sitepack/templates/security/change_password.html
+++ b/application/sitepack/templates/security/change_password.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Change password &mdash; {{ super() }}{% endblock %}
+{% block title %}{{_('Change password') }} &mdash; {{ super() }}{% endblock %}
 {% block content %}
   <div class="container">
-    <div class="page-header"><h1>Change password</h1></div>
+    <div class="page-header"><h1>{{_('Change password') }}</h1></div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
+        <form class="form-horizontal" style="direction:ltr"
+            action="{{ url_for_security('change_password') }}"
+            method="POST" name="change_password_form">
           {{ change_password_form.hidden_tag() }}
           {{ wtf.form_errors(change_password_form, hiddens="only") }}
           {{ wtf.form_field(change_password_form.password, form_type="horizontal") }}
