--- a/application/sitepack/templates/security/forgot_password.html
+++ b/application/sitepack/templates/security/forgot_password.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Send password reset instructions &mdash; {{ super() }}{% endblock %}
+{% block title %}{{ _('Send password reset instructions') }} &mdash; {{ super() }}{% endblock %}
 {% block content %}
   <div class="container">
-    <div class="page-header"><h1>Send password reset instructions</h1></div>
+    <div class="page-header"><h1>{{ _('Send password reset instructions') }}</h1></div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+        <form class="form-horizontal" style="direction:ltr"
+              action="{{ url_for_security('forgot_password') }}"
+              method="POST" name="forgot_password_form">
           {{ forgot_password_form.hidden_tag() }}
           {{ wtf.form_errors(forgot_password_form, hiddens="only") }}
           {{ wtf.form_field(forgot_password_form.email, form_type="horizontal") }} 
