--- a/application/sitepack/templates/security/register_user.html
+++ b/application/sitepack/templates/security/register_user.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Sign up &mdash; {{ super() }}{% endblock %}
+{% block title %}{{ _('Sign up') }} &mdash; {{ super() }}{% endblock %}
 {% block content %}
   <div class="container">
-    <div class="page-header"><h1>Sign up</h1></div>
+    <div class="page-header"><h1>{{ _('Sign up') }}</h1></div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
+        <form class="form-horizontal" style="direction:ltr"
+              action="{{ url_for_security('register') }}"
+              method="POST" name="register_user_form">
           {{ register_user_form.hidden_tag() }}
           {{ wtf.form_errors(register_user_form, hiddens="only") }}
           {{ wtf.form_field(register_user_form.email, form_type="horizontal") }}
