--- a/application/sitepack/templates/security/send_confirmation.html
+++ b/application/sitepack/templates/security/send_confirmation.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Resend confirmation instructions &mdash; {{ super() }}{% endblock %}
+{% block title %}{{ _('Resend confirmation instructions') }} &mdash; {{ super() }}{% endblock %}
 {% block content %}
   <div class="container">
-    <div class="page-header"><h1>Resend confirmation instructions</h1></div>
+    <div class="page-header"><h1>{{ _('Resend confirmation instructions') }}</h1></div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
+        <form class="form-horizontal" style="direction:ltr"
+            action="{{ url_for_security('send_confirmation') }}"
+            method="POST" name="send_confirmation_form">
           {{ send_confirmation_form.hidden_tag() }}
           {{ wtf.form_errors(send_confirmation_form, hiddens="only") }}
           {{ wtf.form_field(send_confirmation_form.email, form_type="horizontal") }}
