--- a/application/sitepack/templates/useradmin/index.html
+++ b/application/sitepack/templates/useradmin/index.html
@@ -1,22 +1,22 @@
 {%- extends "base.html" %}
 {% from "bootstrap/utils.html" import icon %}
-{% block title %}User admin &mdash; {{ super() }}{% endblock %}
+{% block title %}{{ _('User admin') }} &mdash; {{ super() }}{% endblock %}
 {%- block content %}
 <div class="container">
   <div class="page-header">
-    <h1>User admin</h1>
+    <h1>{{ _('User admin') }}</h1>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <table class="table table-striped table-hover table-bordered table-condensed">
+      <table class="table table-striped table-hover table-bordered table-condensed" style="direction:ltr">
         <tr class="info">
-          <th style="width:5%">
+          <th style="width:5%; text-align:left">
             <a class="btn btn-xs btn-primary"
               href="{{ url_for('useradmin.create_or_edit_user') }}">
               {{ icon('plus') }}
             </a>
           </th>
-          <th>Email</th>
+          <th style="text-align:left">Email</th>
           {%- for r in roles %}
             <th style="width:10%" class="text-center">{{ r }}</th>
           {%- endfor %}
