--- a/application/templates/backend/create_or_edit_news_item.html
+++ b/application/templates/backend/create_or_edit_news_item.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 {%- block title -%}
-  {% if news_item %}Edit "{{ news_item }}"{% else %}Create a news item{% endif %}
+  {% if news_item %}{{ _('Edit') }} "{{ news_item }}"{% else %}{{ _('Create a news item') }}{% endif %}
   &mdash; {{ super() }} site editor
 {%- endblock -%}
 {% block content %}
@@ -9,20 +9,22 @@
     <div class="page-header">
       <h1>
         {%- if news_item -%}
-          Edit "{{ news_item }}"
+          {{ _('Edit') }} "{{ news_item }}"
         {% else %}
-          Create a news item
+          {{ _('Create a news item') }}
         {%- endif -%}
       </h1>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" action="" method="POST">
+        <form class="form-horizontal" action="" method="POST" style="direction:ltr">
           {{ form.hidden_tag() }}
           {{ wtf.form_errors(form, hiddens="only") }}
           {{ wtf.form_field(form.title, form_type="horizontal") }}
           {{ wtf.form_field(form.content, form_type="horizontal") }}
-          {{ wtf.form_field(form.members_only, form_type="horizontal") }}
+          <div style="direction:{{ session.language_direction }}">
+            {{ wtf.form_field(form.members_only, form_type="horizontal") }}
+          </div>
           <div class="form-group">
             <div class="col-lg-offset-2 col-lg-10">
               <input class="btn btn-primary" id="submit" name="submit" value="Update" type="submit">
