--- a/application/templates/members.html
+++ b/application/templates/members.html
@@ -22,6 +22,7 @@ $('#accordion .panel-body a').attr('target','_blank') // _blankize all the links
           {{ _('Nothing special') }} :(
         </div>
       {% endif %}
+      {% include "_pagination.html" %}
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="direction:ltr">
         {% for o in object_list %}
           <div class="panel panel-info">
