--- a/application/templates/_pagination.html
+++ b/application/templates/_pagination.html
@@ -1,18 +1,34 @@
-<nav>
-  <ul class="pager" style="direction:{{ session.language_direction }}">
-    {%- if pagination.get_page()>1 -%}
-      <li>
-        <a href="?page={{ pagination.get_page()-1 }}">
-          {{ _('Newer items') }}
-        </a>
-      </li>
-    {%- endif -%}
-    {%- if pagination.get_page()<pagination.get_page_count() -%}
-      <li>
-        <a href="?page={{ pagination.get_page()+1 }}">
-          {{ _('Older items') }}
-        </a>
-      </li>
-    {%- endif -%}
-  </ul>
-</nav>
+{%- with current_page=pagination.get_page(), page_count=pagination.get_page_count() %}
+  {%- if current_page>1 or current_page<page_count %}
+    <nav class="text-center">
+      <ul class="pagination">
+        {%- if current_page>1 -%}
+          <li>
+            <a href="?page={{ current_page-1 }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="disabled">
+            <span aria-hidden="true">&laquo;</span>
+          </li>
+        {%- endif %}
+        {%- for page in range(1,page_count+1) %}
+            <li{% if page==current_page %} class="active"{% endif %}>
+              <a href="?page={{ page }}">{{ page }}</a></li>
+        {%- endfor %}
+        {%- if current_page<page_count -%}
+          <li>
+            <a href="?page={{ current_page+1 }}" aria-label="Previous">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="disabled">
+            <span aria-hidden="true">&raquo;</span>
+          </li>
+        {%- endif %}
+      </ul>
+    </nav>
+  {%- endif -%}
+{%- endwith %}
